test/sema/typeck/var/def-for-var-unknown.out
error: unknown identifier `test`.
--> def-for-var-unknown.dora:1:18
 | fn a() { let a : test = 1; a; }
                    ~~~~
 | 
1 error found.
