test/sema/typeck/var/def-for-var-unknown.dora
fn a() { let a : test = 1; a; }
